изменила метод регистрации пользователя