@@ -22,7 +22,11 @@ public class UrlDecodeFilter implements Filter {
             @Override
             public String getParameter(String name) {
                 String value = super.getParameter(name);
-                return URLDecoder.decode(value, StandardCharsets.UTF_8);
+                try {
+                    return URLDecoder.decode(value, StandardCharsets.UTF_8.name());
+                } catch (UnsupportedEncodingException e) {
+                    throw new RuntimeException("Failed to decode parameter", e);
+                }
             }
         };
         chain.doFilter(requestWrapper, response);
